--- a/index.html
+++ b/index.html
@@ -17,26 +17,37 @@
       <section>
         <div class="container">
           <div class="image"></div>
-          <div class="title">title</div>
-          <div class="text">text</div>
-          <div class="details">
-            <div class="icon">icon</div>
-            <div class="plan">plan</div>
-            <div class="link">link</div>
+          <div class="title">
+            <h2>Order Summary</h2>
           </div>
-          <div class="button">button</div>
-          <div class="linkCancel">linkCancel</div>
-          Order Summary You can now listen to millions of songs, audiobooks, and
-          podcasts on any device anywhere you like! Annual Plan $59.99/year
-          Change Proceed to Payment Cancel Order
+          <div class="text">
+            <p>
+              You can now listen to millions of songs, audiobooks, and podcasts
+              on any device anywhere you like!
+            </p>
+          </div>
+          <div class="details">
+            <div class="icon">
+              <figure>
+                <img src="./images/icon-music.svg" alt="icon music" />
+              </figure>
+            </div>
+            <div class="plan">
+              <p><span>Annual Plan</span></p>
+              <p>$59.99/year</p>
+            </div>
+            <div class="link">
+              <p><a href="#">Change</a></p>
+            </div>
+          </div>
+          <div class="button">
+            <div>Proceed to Payment</div>
+          </div>
+          <div class="linkCancel">
+            <p><a href="#">Cancel Order</a></p>
+          </div>
         </div>
       </section>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </div>
     </main>
   </body>
 </html>
